<package>
  <name>bebop_controller</name>
  <version>0.1.0</version>
  <author email="unknown@unknown.com">Alessio</author>
  <maintainer email="unknown@unknown.com">Alessio</maintainer>
  <description>

     bebop_controller

  </description>
  <author>Alessio</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/bebop_controller</url>
  <buildtool_depend>catkin</buildtool_depend> 	
  <build_depend>moveit_core</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>ros_utils</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>	
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>ros_utils</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>


